# linear-cursors

./: Dockerfile  Main.hs  Makefile  README.md  linear-cursors.cabal  linear-packed.cabal  stack.yaml
src/: Main.hs
src/Cursors/: Mutable.hs
src/Cursors/Internal/: ByteArray.hs  Common.hs  Std.hs  UnboxedHas.hs  Unsafe.hs
src/Linear/: Common.hs  Std.hs  Unrestricted.hs  Unsafe.hs
src/Packed/: Stack.hs
src/Packed/Cursors/: Mutable.hs
src/Packed/Cursors/Internal/: ByteArray.hs  Common.hs  Std.hs  UnboxedHas.hs  Unsafe.hs
