
name:           linear-cursors
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/simple#readme>
-- homepage:       https://github.com/githubuser/simple#readme
-- bug-reports:    https://github.com/githubuser/simple/issues
-- author:         Author name here
-- maintainer:     example@example.com
-- copyright:      2018 Author name here
-- license:        BSD3
-- license-file:   LICENSE
cabal-version:  >= 1.10
-- extra-source-files:
--     ChangeLog.md
--     README.md

-- source-repository head
--   type: git
--  location:

build-type: Simple
extra-source-files: README.md

executable linear-cursors.exe
  main-is: Main.hs
  other-modules:
           Cursors.Mutable
           Linear.Std
           Linear.Common
           Linear.Unsafe
  hs-source-dirs:
      src
  -- ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      bytestring >=0.10,
      binary,
      containers,
      ghc-prim,
      deepseq,
      socket
  default-language: Haskell2010

-- test-suite simple-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   other-modules:
--       Paths_simple
--   hs-source-dirs:
--       test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5
--     , simple
--   default-language: Haskell2010
